# kitty24

./: .gitignore  Cargo.toml  IDEAS.md  README.md  TODO.md  boot.kitty  boot.kitty.script  debug.kitty.asm  demo.kitty.asm  n_body.kitty.asm  sprites.kitty.asm  text.kitty.asm  types.kitty.script
boot/: boot.kitty.script  math.kitty.script
docs/: kitty_assembly.md  kitty_script.md
examples/: breakout.kitty.script  n_body.kitty.script  outer_wilds.kitty.script  snake.kitty.script
examples/breakout/: main.rs
examples/demo/: boot.kitty.script  main.rs  stage.rs
examples/n_body/: main.rs  stage.rs
examples/outer_wilds/: main.rs  shader.rs  stage.rs
examples/snake/: main.rs  stage.rs
examples/sprites/: boot.kitty.script  main.rs  shader.rs
examples/text/: boot.kitty.script  main.rs  stage.rs
examples/twister/: boot.kitty.script  main.rs  math.kitty.script
kitty24/: boot.kitty  boot_test.kitty  boot_visualizer.kitty  bullet_hell.kitty  debug.kitty  flash.kitty  flashing.kitty  hello.kitty  hello.txt  meow.kitty  mewmew.kitty  oh_hi.kitty  spinny.kitty  visualloc.kitty
kitty24/boot/: boot.kitty.script  editor.kitty.script  editor_file.kitty.script  editor_text.kitty.script  lib.kitty.script  list.kitty.script  main.kitty.script  new_project.kitty.script
kitty24/boot_test/: lib.kitty.script  main.kitty.script
kitty24/boot_visualizer/: main.kitty.script
kitty24/bullet_hell/: main.kitty.script
kitty24/flashing/: main.kitty.script
kitty24/hello/: hello.kitty.script  main.kitty.script
src/: main.rs  stage.rs
tests/: main.rs
tests/common/: mod.rs
(+54 files in other folders)
