[package]
name = "kitty24"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "lib/common" }
assembler = { path = "lib/assembler" }
compiler = { path = "lib/compiler" }
virtual_machine = { path = "lib/virtual_machine" }
miniquad = "0.3.16"
cpal = "0.15.2"
png = "0.17.9"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.dev.package."*"]
opt-level = 3
overflow-checks = false

[profile.release]
lto = "thin"
panic = "abort"
